p3/confs/mgomes-d-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mgomes-d-ingress
  namespace: dev
  annotations:
    spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"

spec:
  ingressClassName: nginx
  rules:
    - host: mgomesd.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-mgomes-d
                port:
                  number: 80
